--- a/templates/base.html
+++ b/templates/base.html
@@ -1,43 +1,81 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link href="https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css"rel="stylesheet"/>
-    <link rel="stylesheet" href="{{url_for('static', filename='/css/style.css')}}"/>
-    <title>{% block title %}{% endblock %}</title>
-</head>
-<body>
-    <div class="side-navbar active-nav d-flex justify-content-between flex-wrap flex-column" id="sidebar">
-        <ul class="nav flex-column text-white w-100">
-            <a href="#" class="nav-link h3 text-white my-2">
-                Actions
-            </a>
-            <li href="{{url_for('welcome')}}" class="nav-link">
-                <span class="mx-2">Predict</span>
-            </li>
-            <li href="#" class="nav-link">
-                <span class="mx-2">Train</span>
-            </li>
-            <li href="#" class="nav-link">
-                <span class="mx-2">Statistics</span>
-            </li>
-        </ul>
-        <span href="#" class="nav-link h4 w-100 mb-5">
-            <a href="https://github.com/ulichovick/ann_fashion_mnist"><i class="bx bxl-github text-white"></i></a>
-            <a href="https://www.linkedin.com/in/andr%C3%A9s-rojas-parra-46144016b/"><i class="bx bxl-linkedin px-2 text-white"></i></a>
-        </span>
-    </div>
-    
-    <div class="p-1 my-container active-cont">
-        <nav class="navbar top-navbar navbar-light bg-light px-5">
-            <a class="btn border-0" id="menu-btn"><i class="bx bx-menu"></i></a>
-        </nav>
-        <h1>Content</h1>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='/javascript/main.js') }}"></script>
-</body>
+<!DOCTYPE HTML>
+<!--
+	Editorial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>{% block title %}{% endblock %}</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="{{url_for('static', filename='/css/main.css')}}" />
+	</head>
+	<body class="is-preload">
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Main -->
+					<div id="main">
+						<div class="inner">
+
+							<!-- Header -->
+								<header id="header">
+									<a href="index.html" class="logo">{% block header %}{% endblock %}</a>
+									<ul class="icons">
+										<li><a href="https://github.com/ulichovick/ann_fashion_mnist" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a href="https://www.linkedin.com/in/andr%C3%A9s-rojas-parra-46144016b/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+									</ul>
+								</header>
+								{% block content %}{% endblock %}
+
+						</div>
+					</div>
+
+				<!-- Sidebar -->
+					<div id="sidebar">
+						<div class="inner">
+
+							<!-- Menu -->
+								<nav id="menu">
+									<header class="major">
+										<h2>Menu</h2>
+									</header>
+									<ul>
+										<li><a href="index.html">Predict</a></li>
+										<li><a href="generic.html">Train</a></li>
+										<li><a href="elements.html">Statistics</a></li>
+									</ul>
+								</nav>
+
+							<!-- Section -->
+								<section>
+									<header class="major">
+										<h2>Get in touch</h2>
+									</header>
+									<p>some cool text</p>
+									<ul class="contact">
+										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
+										<li class="icon solid fa-phone">(000) 000-0000</li>
+									</ul>
+								</section>
+
+							<!-- Footer -->
+								<footer id="footer">
+									<p class="copyright">&copy; Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+								</footer>
+
+						</div>
+					</div>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="{{ url_for('static', filename='/js/jquery.min.js') }}"></script>
+			<script src="{{ url_for('static', filename='/js/browser.min.js') }}"></script>
+			<script src="{{ url_for('static', filename='/js/breakpoints.min.js') }}"></script>
+			<script src="{{ url_for('static', filename='/js/util.js') }}"></script>
+			<script src="{{ url_for('static', filename='/js/main.js') }}"></script>
+	</body>
 </html>
