added upload function and the predict function(currently only uses the numpy network) now it works nice, needs some polishing but looks like the beginning of the end :) im happy

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,8 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Predict</a></li>
+										<li><a href="{{url_for('welcome')}}">Index</a></li>
+										<li><a href="{{url_for('upload_file')}}">Predict</a></li>
 										<li><a href="generic.html">Train</a></li>
 										<li><a href="elements.html">Statistics</a></li>
 									</ul>
