--- a/templates/predict.html
+++ b/templates/predict.html
@@ -7,7 +7,7 @@
 			<section id="banner">
 				<div class="content">
 					<header>
-						<h1>Lets try to predict!</br></h1>
+						<h1>Lets try to predict with {{network}}!</br></h1>
 						<p>Upload your image.</p>
 						<form method='POST' enctype=multipart/form-data>
 							<input type='file' name='file'>
