--- a/templates/image.html
+++ b/templates/image.html
@@ -10,9 +10,14 @@
 										<h1>{{filename}}</h1>
 										<p><strong>Two Neural networks that tell you what is in your image</strong> (or at least try to)</p>
 									</header>
-									<p>The algorithm predicts: <strong> {{prediction}} </p>
+									<p>The {{network}} network predicts: <strong> {{prediction}} </p>
 									<ul class="actions">
-										<li><a href="{{url_for('upload_file')}}" class="button big">Try another</a></li>
+										{% if network == "Tensorflow" %}
+										<li><a href="{{url_for('tf_predict')}}" class="button big">Try another</a></li>
+										{% endif %}
+										{% if network == "Numpy" %}
+										<li><a href="{{url_for('np_predict')}}" class="button big">Try another</a></li>
+										{% endif %}
 									</ul>
 								</div>
 								<span class="image object">
