added the mockup of the about template, lets fill it with some info and do the first try to add and show the statistics view with the confusion matrix, and scores

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 									</header>
 									<p>pending explanation</p>
 									<ul class="actions">
-										<li><a href="#" class="button big">Learn More</a></li>
+										<li><a href="{{url_for('info')}}" class="button big">Learn More</a></li>
 									</ul>
 								</div>
 								<span class="image object">
