--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo">{% block header %}{% endblock %}</a>
+									<a href="{{url_for('welcome')}}" class="logo">{% block header %}{% endblock %}</a>
 									<ul class="icons">
 										<li><a href="https://github.com/ulichovick/ann_fashion_mnist" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									</ul>
