added the accuracy to the stats page, TODO: conf matrix, scores and idk xD

--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
 											</ul>
 										</li>
 										<li><a href="generic.html">Train</a></li>
-										<li><a href="elements.html">Statistics</a></li>
+										<li><a href="{{url_for('evaluate_np')}}">Statistics</a></li>
 									</ul>
 								</nav>
 
