--- a/templates/info.html
+++ b/templates/info.html
@@ -12,9 +12,33 @@
 			<section id="banner">
 				<div class="content">
 					<header>
-						<h1>About this project</br></h1>
+						<h1>About this project<br></h1>
 					</header>
-					<p>a lot of info</p> 	
+					<ul>
+						<li>
+							<strong>Status:</strong> In progress.<br>
+						</li>
+						<li>
+							<strong>Tools used: </strong>
+						</li>
+						<ul style="list-style-type: square;">
+							<li>
+								Flask
+							</li>
+							<li>
+								PIL
+							</li>
+							<li>
+								Matplotlib
+							</li>
+							<li>
+								Numpy
+							</li>
+							<li>
+								Tensorflow
+							</li>
+						</ul>
+					</ul>
 				</div>
 			</section>
 {% endblock content %}
