added scores matrix :) fml

--- a/templates/stats.html
+++ b/templates/stats.html
@@ -12,11 +12,12 @@
 									<div class="row">
 										<div class="col-sm-5">
 											<h2>Training set</h2>
-											<p>The training set accuracy is: <strong> {{train_accu}} </strong></p>
+											<p>The training set accuracy is: <strong> {{'%0.2f'|format(train_accu)}} </strong></p>
 											<table>
 												<thead>
 													<tr>
-													{% for label in class_names %}
+														<th> </th>
+													{% for label in class_rep_train["T-shirt/top"].keys() %}
 														<th>
 															{{label}}
 														</th>
@@ -26,10 +27,21 @@
 												<tbody>
 													{% for key,value in class_rep_train.items() %}
 													<tr>
-														{% for key,value in value.items() %}
-															<td>
-																{{key}}
-															</td>
+													<td><b>{{key}}</b></td>
+														{% if value is mapping %}
+															{% for key2,value2 in value.items() %}
+																	<td>
+																		{% if value2 % 1 != 0 %}
+																			{{'%0.5f'|format(value2)}}
+																		{% else %}
+																			{{value2}}
+																		{% endif %}
+																	</td>
+															{% endfor %}
+														{% else %}
+														<td>{{value}}</td>
+														{% endif %}
+														
 													</tr>
 													{% endfor %}
 												</tbody>
@@ -45,10 +57,40 @@
 										<!-- Break -->
 										<div class="col-sm-4">
 											<h2>Validation set</h2>
-											<p>The validation set accuracy is: <strong> {{validation_accu}} </strong></p>
-											<p>scores scores scores scores scores scores scores</p>
-											<p>scores scores scores scores scores scores scores</p>
-											<p>scores scores scores scores scores scores scores</p>
+											<p>The validation set accuracy is: <strong> {{'%0.2f'|format(validation_accu)}} </strong></p>
+											<table>
+												<thead>
+													<tr>
+														<th> </th>
+													{% for label in class_rep_valid["T-shirt/top"].keys() %}
+														<th>
+															{{label}}
+														</th>
+													{% endfor %}
+													</tr>
+												</thead>
+												<tbody>
+													{% for key,value in class_rep_valid.items() %}
+													<tr>
+													<td><b>{{key}}</b></td>
+														{% if value is mapping %}
+															{% for key2,value2 in value.items() %}
+																	<td>
+																		{% if value2 % 1 != 0 %}
+																			{{'%0.5f'|format(value2)}}
+																		{% else %}
+																			{{value2}}
+																		{% endif %}
+																	</td>
+															{% endfor %}
+														{% else %}
+														<td>{{value}}</td>
+														{% endif %}
+														
+													</tr>
+													{% endfor %}
+												</tbody>
+											</table>
 										</div>
 										<div class="col-sm-8">
 											<span class="card" style="width: 350px;">
@@ -60,9 +102,40 @@
 										<!-- Break -->
 										<div class="col-sm-4">
 											<h2>Test Set</h2>
-											<p>The test set accuracy is: <strong> {{test_accu}} </strong></p>
-											<p>scores scores scores scores scores scores scores</p>
-											<p>scores scores scores scores scores scores scores</p>
+											<p>The test set accuracy is: <strong> {{'%0.2f'|format(test_accu)}} </strong></p>
+											<table>
+												<thead>
+													<tr>
+														<th> </th>
+													{% for label in class_rep_test["T-shirt/top"].keys() %}
+														<th>
+															{{label}}
+														</th>
+													{% endfor %}
+													</tr>
+												</thead>
+												<tbody>
+													{% for key,value in class_rep_test.items() %}
+													<tr>
+													<td><b>{{key}}</b></td>
+														{% if value is mapping %}
+															{% for key2,value2 in value.items() %}
+																	<td>
+																		{% if value2 % 1 != 0 %}
+																			{{'%0.5f'|format(value2)}}
+																		{% else %}
+																			{{value2}}
+																		{% endif %}
+																	</td>
+															{% endfor %}
+														{% else %}
+														<td>{{value}}</td>
+														{% endif %}
+														
+													</tr>
+													{% endfor %}
+												</tbody>
+											</table>
 										</div>
 										<div class="col-sm-8">
 											<span class="card" style="width: 350px;">
