fixed the stats view, now it doesnt have to run the evaluation functions to display the data when it gets a GET request, just load it from the drive and in case its a POST request it runs the functions and stores it into the drive

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
 												<li><a href="{{url_for('tf_predict')}}">Tensorflow Network</a></li>
 											</ul>
 										</li>
-										<li><a href="generic.html">Train</a></li>
+										<li><a href="{{url_for('train_np')}}">Train</a></li>
 										<li><a href="{{url_for('evaluate_np')}}">Statistics</a></li>
 									</ul>
 								</nav>
